feat: added fonts

--- a/apps/web/src/style.css
+++ b/apps/web/src/style.css
@@ -1,5 +1,9 @@
 @import '@workspace/tailwind-config/style.css';
 
+@import '@fontsource-variable/league-spartan';
+@import '@fontsource-variable/jetbrains-mono';
+@import '@fontsource-variable/source-serif-4';
+
 /**
  * This is necessary to load the @repo/ui package when moving from
  * @tailwindcss/vite v4.0.7 to v4.0.8.
@@ -20,17 +24,17 @@
 /*  !*strategy: class;*!*/
 /*}*/
 
-/*:root {*/
-/*  --font-sans: 'Inter Variable', sans-serif;*/
-/*  --font-serif: 'Source Serif 4 Variable', serif;*/
-/*  --font-mono: 'JetBrains Mono Variable', monospace;*/
-/*}*/
+:root {
+  --font-sans: 'League Spartan Variable', sans-serif;
+  --font-serif: 'Source Serif 4 Variable', serif;
+  --font-mono: 'JetBrains Mono Variable', monospace;
+}
 
-/*.dark {*/
-/*  --font-sans: 'Inter Variable', sans-serif;*/
-/*  --font-serif: 'Source Serif 4 Variable', serif;*/
-/*  --font-mono: 'JetBrains Mono Variable', monospace;*/
-/*}*/
+.dark {
+  --font-sans: 'League Spartan Variable', sans-serif;
+  --font-serif: 'Source Serif 4 Variable', serif;
+  --font-mono: 'JetBrains Mono Variable', monospace;
+}
 
 /*@theme inline {*/
 /*  --font-sans: var(--font-sans);*/
